--- a/src/App.css
+++ b/src/App.css
@@ -1856,7 +1856,7 @@ select.post-select {
 .post-submit {
   background-color: white;
   font-size: 1.5rem;
-  border: 0.1rem solid black;;
+  border: 0.1rem solid black;
   border-radius: 0.5rem;
   padding: 1rem;
   margin-left: 1rem;
@@ -1967,7 +1967,71 @@ select.post-select {
 }
 
 
+.delete-div {
+  padding-top: 1rem;
+  display: flex;
+  justify-content: center;
+  
+}
 
+.delete-btn {
+  background-color: #FF851B;
+  color: #fff;
+  border: 0.1rem solid red;
+  border-radius: 0.2rem;
+  padding: 0.5rem;
+  transition: all 0.1s ease-in-out;
+}
+
+.delete-btn:hover {
+  transform: scale(1.1, 1.1);
+}
+
+.confirm-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+}
+
+
+.confirm-text p {
+  font-size: 1.5rem;
+  margin: 0rem;
+  margin-bottom: 1rem;
+  padding: 0;
+  /* color: #5c75f3; */
+  color: red;
+  font-weight: bold;
+}
+
+.yes-btn {
+  padding: 0.3rem 1rem;
+  color: white;
+  background-color: #FF851B;
+  border-radius: 0.2rem;
+  border: 0.1rem solid red;
+  transition: all 0.1s ease-in-out;
+}
+
+.yes-btn:hover {
+  transform: scale(1.1, 1.1);
+}
+
+.no-btn {
+  padding: 0.3rem 1rem;
+  margin-left: 0.5rem;
+  background-color: transparent;
+  border-radius: 0.2rem;
+  border: 0.1rem solid black;
+  transition: all 0.1s ease-in-out;
+}
+
+.yes-btn:hover {
+  transform: scale(1.1, 1.1);
+}
 
 
 
