--- a/src/App.css
+++ b/src/App.css
@@ -923,7 +923,6 @@ a {
   border-radius: 0.5rem;
   padding: 0.9rem;
   margin-right: 0.5rem;
-  margin-bottom: 0.5rem;
   /* margin: 0.5 0.5 0.5; */
   /* margin: 0; */
   cursor: pointer;
@@ -931,7 +930,8 @@ a {
   background-color: #fff;
   font-weight: bold;
   width: 3.5rem;
-  height: 1%;
+  height: 100%;
+  /* height: 1%; */
   /* height: 3.5rem; */
 
 }
@@ -952,6 +952,13 @@ a {
 
 .replyEdit-btn-container {
   display: flex;
+  justify-content: space-between;
+}
+
+.replyEdit-duo-btn {
+  display: flex;
+  justify-content: center;
+  height: 100%;
 }
 
 .commentReplyEdit-container {
@@ -1007,6 +1014,7 @@ textarea {
   border: 0.1rem solid transparent;
   border-radius: 0.5rem;
   width: 15rem;
+  height: 100%;
 }
 
 .comment-submit:hover {
@@ -1981,6 +1989,7 @@ select.post-select {
   border-radius: 0.2rem;
   padding: 0.5rem;
   transition: all 0.1s ease-in-out;
+  cursor: pointer;
 }
 
 .delete-btn:hover {
@@ -2014,6 +2023,7 @@ select.post-select {
   border-radius: 0.2rem;
   border: 0.1rem solid red;
   transition: all 0.1s ease-in-out;
+  cursor: pointer;
 }
 
 .yes-btn:hover {
@@ -2027,12 +2037,21 @@ select.post-select {
   border-radius: 0.2rem;
   border: 0.1rem solid black;
   transition: all 0.1s ease-in-out;
+  cursor: pointer;
 }
 
-.yes-btn:hover {
+.no-btn:hover {
   transform: scale(1.1, 1.1);
 }
 
+/* 
+.delete-comment-btn {
+  padding: 0.3rem 1rem;
+  margin: 0;
+  background-color: #FF851B;
+  border: 0.1rem solid red;
+  border-radius: 0.2rem;
+} */
 
 
 @media (max-width: 1500px) {
