--- a/src/App.css
+++ b/src/App.css
@@ -126,7 +126,26 @@ li, ul {
   font-size: 1.5rem;
   padding-top: 1rem;
   padding-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
 }
+
+
+
+#more-subreddits-link {
+  margin-bottom: 1rem;
+}
+
+.search-for-subreddit-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.search-for-subreddit {
+
+}
+
+
 
 .more-subreddits a:hover {
   color: #3d5af1;
@@ -1078,7 +1097,7 @@ textarea {
   display: inline-block;
   background-color: #ffffff;
   height: 20rem;
-  width: 90%;
+  width: 100%;
   padding: 2rem;
   border-radius: 0.5rem;
   /* box-shadow: 0 1px 2px rgba(0,0,0,0.15); */
