--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@ html {
   font-size: 62.5%;
 }
 
+body {
+  height: 100%;
+  background-color: #fcfcfc;
+}
+
 li, ul {
   margin-left: 0;
   padding-left: 0;
@@ -10,7 +15,9 @@ li, ul {
 .app {
   /* text-align: center; */
   background-color: #fcfcfc;
+  height: 100%;
 }
+
 
 .left-side-app {
   width: 30%;
@@ -710,6 +717,30 @@ a {
 
 }
 
+
+.myComments-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.myComments-container {
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  background-color: #ffffff;
+  /* background-color: red; */
+  padding: 1rem 2rem 1rem 2rem;
+  /* padding: 2rem; */
+  margin-bottom: 2rem;
+  align-items: center;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+.myComments-container-title {
+  font-size: 2.5rem;
+}
+
 .post-comments-container {
   margin-top: 1rem;
   margin-left: 2.5rem;
@@ -1218,8 +1249,15 @@ textarea {
 .subreddit-page-description {
   width: 20rem;
   color: #b1b1b1;
-  font-size: 1.5rem; 
+  font-size: 1.3rem; 
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
+  color: #4a4a4a;
 }
+
 
 
 .active-users-container {
@@ -1263,12 +1301,12 @@ textarea {
   background-color: inherit;
   border: none;
   text-decoration: none;
-  margin: 0 2rem 0 2rem;
+  /* margin: 0 2rem 0 2rem; */
   padding: 1rem;
   display: flex;
   /* min-height: 3rem;
   min-width: 3rem; */
-  width: 10%;
+  width: 15%;
   justify-content: center;
   align-items: center;
   /* background-color: #ececec; */
@@ -1516,6 +1554,20 @@ textarea {
   color: #4a4a4a;
   padding-top: 1rem;
   padding-right: 2rem;
+  /* transition: all 0.3s ease-in-out */
+}
+
+.post-listing-subreddit:hover {
+  color: #5c75f3;
+  /* transform: scale(1.3, 1.3); */
+}
+
+.post-listing-span {
+ transition: all 0.3 ease-in-out 
+}
+
+.post-listing-span:hover {
+  transform: scale(1.3, 1.3)
 }
 
 
