--- a/src/App.css
+++ b/src/App.css
@@ -51,28 +51,33 @@ li, ul {
   /* border: 0.1rem solid black;
   border-radius: 50%; */
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   width: auto;
   height: 4rem;
   padding-right: 2rem;
+  padding: 1rem;
+  margin-right: 1rem;
   /* height: auto; */
   
 }
 
 .profile-avatar:hover {
   cursor: pointer;
-  opacity: 0.2;
-  display: flex;
-  align-items: center;
+  background-color: #ececec;
+  border-radius: 0.5rem
+  /* opacity: 0.2; */
+  /* display: flex; */
+  /* align-items: center; */
   
   
 }
 
 .profile-picture-container {  
   display: flex;
-  justify-content: flex-end;
-  /* flex-direction: row-reverse; */
+  /* justify-content: space-between; */
+  flex-direction: row-reverse;
   align-items: center;
   /* padding-right: 2rem; */
   height: 100%;
@@ -86,11 +91,15 @@ li, ul {
   max-height: 100%;
 }
 
+.profile-name-span {
+  color: #3d5af1;
+}
+
 .top-navbar {
   font-size: 1rem;
   background: #fff;
   width: 100%;
-  height: 6vh;
+  height: 7vh;
   /* display: fixed; */
   font-style: Arial;
   text-decoration: none;
@@ -388,10 +397,13 @@ li, ul {
 
 .menu-text {
   display: flex;
+  justify-content: space-between;
   align-items: center;
   height: 100%;
   font-size: 1.5rem;
 }
+
+
 
 
 .menu {
@@ -413,12 +425,21 @@ li, ul {
 .list-item {
   /* background-color: #3d5af1; */
   display: flex;
+  justify-content: space-between;
   align-items: center;
   height: 3vh;
   padding: 1rem 4rem;
   font-size: 1.5rem;
   text-decoration: none;
 }
+
+.navbar-svgs {
+  fill: #4a4a4a;
+}
+
+/* .navbarSVGS {
+  fill: #5c75f3;
+} */
 
 .active {
   background-color:#3d5af1;
@@ -446,6 +467,24 @@ a {
 
 .logout-btn {
   height: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.logout-btn-nav {
+  border: none;
+  background-color: #ff0000;
+  color: white;
+  border-radius: 0.2rem;
+  padding: 1rem;
+  cursor: pointer;
+  transition: all 0.3 ease-in;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+}
+
+.logout-btn-nav:hover {
+  transform: scale(1.05, 1.05);
 }
 
 .user {
