--- a/src/App.css
+++ b/src/App.css
@@ -65,8 +65,8 @@ li, ul {
 
 .profile-avatar:hover {
   cursor: pointer;
-  background-color: #ececec;
-  border-radius: 0.5rem
+  background-color: #87CEFA;
+  border-radius: 0.2rem;
   /* opacity: 0.2; */
   /* display: flex; */
   /* align-items: center; */
@@ -431,6 +431,22 @@ li, ul {
   padding: 1rem 4rem;
   font-size: 1.5rem;
   text-decoration: none;
+  border: 0.1rem solid #fff;
+  margin: 0 1.5rem;
+}
+
+.list-item-active {
+  background-color: #87CEFA;
+  border: 0.1rem solid #5c75f3;
+  border-radius: 0.2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 3vh;
+  padding: 1rem 4rem;
+  margin: 0 1.5rem;
+  font-size: 1.5rem;
+  text-decoration: none;
 }
 
 .navbar-svgs {
@@ -479,8 +495,8 @@ a {
   padding: 1rem;
   cursor: pointer;
   transition: all 0.3 ease-in;
-  margin-bottom: 1rem;
-  margin-top: 1rem;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
 }
 
 .logout-btn-nav:hover {
@@ -589,6 +605,10 @@ a {
   
 }
 
+.toast-container {
+  width: 100%;
+  height: 100%;
+}
 
 
 
@@ -2036,7 +2056,7 @@ select.post-select {
 }
 
 .post-submit:hover {
-  background-color: #b1b1b1;
+  background-color: #87CEFA;
   color: #fff;
 }
 
@@ -2054,7 +2074,7 @@ select.post-select {
 
 
 .search-subreddit-div {
-  padding: 0 1rem;
+  /* padding: 0 1rem; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -2090,7 +2110,7 @@ select.post-select {
 
 
 .create-post-div {
-  padding: 0 1rem;
+  /* padding: 0 1rem; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -2166,6 +2186,7 @@ select.post-select {
   justify-content: center;
   align-items: center;
   padding: 0;
+  padding-top: 1rem;
   margin: 0;
 }
 
@@ -2208,6 +2229,38 @@ select.post-select {
   transform: scale(1.1, 1.1);
 }
 
+.welcome-text {
+  font-size: 3rem;
+}
+
+.login-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+
+}
+
+.login-img {
+  height: 20%;
+}
+
+.login-link {
+  font-size: 2rem;
+  border: none;
+  background-color: #ff0000;
+  color: white;
+  border-radius: 0.2rem;
+  padding: 1rem;
+  cursor: pointer;
+  transition: all 0.3 ease-in;
+  margin-bottom: 1rem;
+  margin-top: 5rem;
+}
+
+
 /* 
 .delete-comment-btn {
   padding: 0.3rem 1rem;
@@ -2216,6 +2269,7 @@ select.post-select {
   border: 0.1rem solid red;
   border-radius: 0.2rem;
 } */
+
 
 
 @media (max-width: 1500px) {
