--- a/src/components/comments/comment.scss
+++ b/src/components/comments/comment.scss
@@ -54,7 +54,8 @@
 	&__author {
 		padding-left: 1rem;
 		color: #5c75f3;
-  		font-size: 1.5rem;
+		font-size: 1.5rem;
+		// padding-right: 1rem;  
 	}
 	&__author-date {
 		font-size: 1rem;
@@ -82,6 +83,28 @@
 	}
 	&__reply-container {
 		width: 100%;
+	}
+}
+
+@media (max-width: 700px) {
+	.modal-info-container {
+		width: 100%;
+		// padding: 2rem;
+	}
+
+	.comments__container {
+		padding-left: 1rem;
+	}
+
+	.comments__author-date {
+		padding-left: 2rem;
+	}
+}
+
+@media (max-width: 500px) {
+
+	.comments__container {
+		padding-left: 0.5rem;
 	}
 }
  
