--- a/src/components/profile/user.scss
+++ b/src/components/profile/user.scss
@@ -38,3 +38,27 @@
 	font-size: 1.5rem;
 	padding: 1rem;
 }
+
+@media (max-width: 425px) {
+	.profile__img {
+		width: 6rem;
+	}
+}
+
+@media (max-width: 325px) {
+	.profile__img {
+		width: 4rem;
+	}
+	.profile__name {
+		font-size: 1.8rem;
+	}
+}
+
+@media (max-width: 200px) {
+	.profile__img {
+		width: 2rem;
+	}
+	.profile__name {
+		font-size: 1.2rem;
+	}
+}
