--- a/src/App.css
+++ b/src/App.css
@@ -729,14 +729,33 @@ a {
   justify */
 }
 
+.video-container {
+  display: flex;
+  justify-content: center;
+}
+
 .player-container {
-  background: #b8b8b8;
+  /* background: #b8b8b8; */
   border-radius: 0.2rem;
   display: flex;
   justify-content: center;
   /* position: fixed; */
 
   /* max-height: 25rem; */
+}
+
+.twitch-container {
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+}
+
+.video-iframe {
+  /* width: 100%; */
+  /* height: 100%; */
+  /* border: 1px solid yellow; */
+  /* height: 60rem; */
+  border: none;
 }
 
 .vid-player {
@@ -890,7 +909,7 @@ a {
 
 
 .loader {
-  fill: #5c75f3;
+  fill: #87CEFA;
   /* animation-name: rotate; */
   /* animation-duration: 2s;
   animation-iteration-count: infinite;
@@ -899,17 +918,27 @@ a {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 8rem;
-  height: 8rem;
+
+  -webkit-animation: spin 1s infinite linear;
+  -o-animation: spin 1s infinite  linear;
+   animation: spin 1s infinite linear;
   transform-origin: center center;
-  animation: spin 1s linear infinite;
-  margin: -4rem 0 0 -4rem;
+  transform-box: fill-box;
+
+  transform-origin: center center;
+  /* animation: spin 1s linear infinite; */
+  /* margin: -1rem 0 0 -1rem; */
   
 }
 
+/* @-webkit-keyframes spin {
+  from {-webkit-transform: rotate(0deg);}
+  to {-webkit-transform: rotate(360deg);}
+} */
+
 @keyframes spin {
   100% {
-    transform: rotate(360deg);
+    transform: rotate(0deg);
     transform: rotate(360deg);
   };
 }
