--- a/src/App.css
+++ b/src/App.css
@@ -384,6 +384,9 @@ li, ul {
 
 } */
 
+
+
+
 .activeText {
   width: 100%;
   /* height: 100%; */
@@ -727,6 +730,11 @@ a {
 .author-subreddit-container {
   /* display: flex;
   justify */
+}
+
+.tweet-container {
+  display: flex;
+  justify-content: center;
 }
 
 .video-container {
@@ -1147,6 +1155,7 @@ textarea {
   width: inherit;
   display: flex;
   flex-direction: column;
+  min-width: 20rem;
   /* align-items: center; */
   /* flex-direction: row; */
   /* align-items: center; */
@@ -1169,6 +1178,7 @@ textarea {
   /* background: rgb(221, 211, 211); */
   background: #b1b1b1;
   padding: 0.9rem;
+  margin-right: 3.5rem;
   border: 0.1rem solid transparent;
   border-radius: 0.5rem;
   width: 15rem;
@@ -1208,6 +1218,7 @@ textarea {
 .comment-buttons {
   margin-left: 0.5rem;
   margin-top: 0.3rem;
+  margin-right: 3rem;
   width: 100%;
   display: flex;
   justify-content: flex-end;
@@ -2072,6 +2083,8 @@ select.post-select {
 .post-text-area {
   font-size: 2rem;
   padding: 0.5rem 1rem;
+  margin-right: 3rem;
+  width: auto;
   /* height: 50rem; */
   /* width: 100%; */
 
@@ -2820,8 +2833,7 @@ select.post-select {
 
   .subreddit-description {
     font-size: 1rem;
-    /* color: black; */
-    /* font-weight: bold; */
+  
   }
 
   .post-thumbnail {
@@ -2847,20 +2859,23 @@ select.post-select {
     line-height: 1.4rem;
   }
 
-  .profile-post-container {
-    /* min-width: 26rem; */
-  }
-
-  .post-listing-thumbnail-container {
-    /* width: 1rem;
-    height: 1rem; */
-  }
 
   .post-thumbnail {
     max-width: 10rem;
     width: 100%;
-    /* height: 1rem; */
   }
+
+  .comment-submit {
+    font-size: 1rem;
+    padding: 0.5rem;
+    width: 8rem;
+  }
+
+  .cancel-comment {
+    font-size: 1rem;
+    padding: 0.5rem;
+  }
+
 }
 
 
