--- a/src/App.css
+++ b/src/App.css
@@ -1137,6 +1137,7 @@ textarea {
   height: 100%;
   border: 1px solid black;
   padding: 0rem;
+  padding-left: 0.5rem;
   margin: 0rem;
   border-radius: 0.5rem;
   box-sizing: border-box;
@@ -1460,9 +1461,9 @@ textarea {
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 10%;
+  border-radius: 0.2rem;
   cursor: pointer;
-  border: 0.1rem solid transparent;
+  border: 0.2rem solid transparent;
 }
 
 
@@ -1529,8 +1530,9 @@ textarea {
 
 }
 
-.active {
+.active-menu {
   background-color: #87CEFA;
+  border: 0.2rem solid #5c75f3;
   /* border: 0.1rem solid #5c75f3; */
 }
 
@@ -1956,7 +1958,7 @@ textarea {
   border-radius: 0.3rem;
   height: 100%;
   width: 100%;
-  background-color: #ececec;
+  background-color: #fcfcfc;
 }
 
 .create-post-page-title-container {
@@ -1992,7 +1994,7 @@ textarea {
   height: 4rem;
   margin: 1rem;
   padding: 0rem;
-  font-size: 2rem;
+  font-size: 1.7rem;
   padding-left: 1rem;
   /* padding-right: 6rem; */
 
@@ -2026,7 +2028,7 @@ textarea {
   width: 100%;
   padding: 0rem;
   margin: 0rem;
-  font-size: 1.5rem;
+  font-size: 1.7rem;
   padding-left: 1rem;
 }
 
@@ -2127,14 +2129,14 @@ select.post-select {
   list-style: none;
   border-radius: 0.5rem;
   /* background-color: rgba(177, 177, 177, 1); */
-  background-color: #fcfcfc;
+  background-color: #87CEFA;
   /* box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1); */
   
   width: 20rem;
   /* width: 100%; */
   height: 5rem;
   cursor: pointer;
-  border: 0.1rem solid #b1b1b1;
+  border: 0.1rem solid #0079d3;
   transition: opacity 0.3s ease-in-out;
   /* border: 2px solid transparent; */
 }
@@ -2627,17 +2629,7 @@ select.post-select {
   }
 
   .post-title-text {
-    /* font-size: 1.5rem;
-    line-height: 1.5rem;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 6;
-    word-wrap: break-word;
-    -webkit-box-orient: vertical;
-    color: #4a4a4a;
-    padding-right: 2rem;
-    padding: 0.5rem; */
+
   }
 
   .post-author {
@@ -2655,7 +2647,7 @@ select.post-select {
 
   .post-thumbnail {
     max-width: 12rem;
-    max-height: 12rem;
+    max-height: 10rem;
   }
 
   .author-img-container {
@@ -2668,6 +2660,13 @@ select.post-select {
   }
 
 }
+
+@media (max-width: 530px) {
+  .create-post-div {
+    padding: 1rem 0rem;
+  }
+}
+
 
 @media (max-width: 530px) {
 
@@ -2723,6 +2722,10 @@ select.post-select {
 
 
 @media (max-width: 467px) {
+  .create-post-div {
+    padding: 1rem;
+  }
+
   .create-post-container {
     margin-bottom: 0;
   }
