--- a/src/App.css
+++ b/src/App.css
@@ -744,13 +744,16 @@ a {
 
 .player-container {
   /* background: #b8b8b8; */
+  /* height: 100%;
+  width: 100%; */
   border-radius: 0.2rem;
   display: flex;
   justify-content: center;
   /* position: fixed; */
-
+  height: 60rem;
   /* max-height: 25rem; */
 }
+
 
 .twitch-container {
   padding: 1rem;
@@ -759,16 +762,11 @@ a {
 }
 
 .video-iframe {
-  /* width: 100%; */
-  /* height: 100%; */
-  /* border: 1px solid yellow; */
-  /* height: 60rem; */
+  width: 70rem;
+  height: 60rem;
   border: none;
 }
 
-.vid-player {
-  
-}
 
 
 .video-react-video {
@@ -2585,6 +2583,13 @@ select.post-select {
   .subreddit-img-container {
     width: 3rem;
   }
+
+  .video-iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+  }
+
 }
 
 
