--- a/src/App.css
+++ b/src/App.css
@@ -1777,7 +1777,7 @@ textarea {
   display: block;
   height: 100%;
   width: 100%;
-  object-fit: cover;
+  object-fit: contain;
   /* height: 100%;
   width: 100%; */
 }
